# oxfmt_elixir

./: .gitignore  Cargo.toml  LICENSE  README.md  mix.exs
.github/workflows/: precompiled-nifs.yml
lib/: oxfmt.ex
lib/oxfmt/: nif.ex
lib/oxfmt/phoenix_live_view/: tag_formatter.ex
native/oxfmt_nif/: Cargo.toml  README.md
native/oxfmt_nif/.cargo/: config.toml
native/oxfmt_nif/src/: lib.rs
test/: oxfmt_test.exs
test/oxfmt/phoenix_live_view/: tag_formatter_test.exs
